# tiger-executive-batch

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: .env.example  pyproject.toml  pyrightconfig.json  run-backend.ps1  test_live_api.py  vlm_doctor.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  data.py  models.py
backend/app/db/: __init__.py  legacy_replay.py  persistence.py
backend/app/services/: __init__.py  charger_identity.py  confidence.py  diagnosis.py  diagnosis_classifier.py  diagnosis_contracts.py  diagnosis_evidence.py  diagnosis_fallback.py  diagnosis_gate.py  diagnosis_gemini.py  diagnosis_ocr.py  diagnosis_perception.py  diagnosis_retrieval.py  diagnosis_support.py  diagnosis_symptom.py  diagnosis_synthesis.py  embeddings.py  gemini_client.py  guidance.py  history.py  intake.py  known_case_retrieval.py  routing.py  storage.py  theme2_mapper.py  theme2_perception.py  theme2_rules.py  theme2_triage.py  tickets.py  triage.py
backend/app/services/diagnosis_assets/: classifier_policy_temp.json  confusion_matrix_5class.csv  label_encoder_5class.pkl  metrics_5class.json  model_5class_logreg.pkl
backend/app/services/diagnosis_config/: ocr_keyword_map.json
backend/omnitriage_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_api_theme2.py  test_frontend_theme2_display_contract.py  test_gemini.py  test_manual_review_workflow.py  test_pseudo_label_script.py  test_round2_evaluation.py  test_round2_manifest.py  test_storage.py  test_theme2_mapper.py  test_theme2_perception.py  test_theme2_rules.py  test_theme2_triage.py  test_ticket_services.py  test_triage.py
docs/: OmniTriage_Comprehensive_Execution_Plan.md  OmniTriage_Implementation_Roadmap.md  OmniTriage_PRD_v1.md  OmniTriage_Tech_Stack.md  OmniTriage_Technical_Architecture.md  briefing_key_points.md  deployment_cloudrun_vercel.md  final_demo_runbook.md  final_report_metrics_template.md  omnitriage_product_spec.md  prd_task_breakdown.md  progress_tracker.md  round1_archive_handoff.md  round2_dataset_strategy.md  round2_evaluation_methodology.md  setup_guide.md  theme2_runtime_contract.md
frontend/: package-lock.json  package.json  run-frontend.ps1  tsconfig.tsbuildinfo
scripts/: build_round2_manifest.py  check_round2_eval_coverage.py  evaluate_round2_cases.py  extract_round2_video_frames.py  gemini_smoke_test.py  promote_manual_review_to_eval.py  pseudo_label_round2_with_theme2.py  round2_eval_utils.py  run_final_validation.ps1  run_unseen_external_smoke.py  (+1 more)
(+194 files in other folders)
