[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnitriage-backend"
version = "0.1.0"
description = "ChargerDoc Theme 2 EV charger triage backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "google-genai>=1.0.0",
  "google-cloud-storage>=2.18.0",
  "python-dotenv>=1.0.0",
  "pillow>=10.0.0",
  "psycopg[binary]>=3.2.0",
  "pyyaml>=6.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "pyright>=1.1.390"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
norecursedirs = ["tests/test-uploads"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
